# django-drf-cms

./: .gitignore  LICENSE  README.rst  setup.cfg
drf_cms/: admin.py  apps.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  settings.py  shortcuts.py  storage_backends.py  translation.py  urls.py  views.py
drf_cms/migrations/: 0001_initial.py  0002_alter_text_unique_together_remove_text_site.py  0003_page_description_en_page_description_es_and_more.py
