[metadata]
name = django-drf-cms
version = 0.2.13
description = A Django app to build a simple cms restful server.
long_description = file: README.rst
url = https://www.spartanbits.com
author = Spartanbits, SLU
author_email = info@spartanbits.com
license = Apache-2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    django_bleach>=3.0.1
    djangorestframework>=3.14.0
    django-modeltranslation>=0.18.9
    django-storages>=1.13.2
    boto3>=1.26.123
    Pillow>=9.5.0
    django-uuslug>=2.0.0